--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,13 @@ body {
   border-color: rgb(221, 218, 47);
 }
 
+.counter h2 {
+  color: rgb(45, 221, 22);
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-color: rgb(221, 218, 47);
+}
+
 .counter_output {
   font-size: 100px;
   color: rgb(221, 218, 47);
@@ -54,7 +61,7 @@ body {
 
 .control_btn {
   font-size: 30px;
-  border-radius: 60%;
+  border-radius: 80%;
   border: 3px solid white;
   margin: 10px;
 }
@@ -64,7 +71,7 @@ body {
   padding: 10px 20px;
   background-color:  rgb(124, 43, 230);
   color: rgb(221, 218, 47);
-  border-radius: 20%;
+  border-radius: 30px;
   transition: 0.2s ease-in-out;
 }
 
@@ -87,7 +94,7 @@ input.submit{
 }
 
 input.submit:hover{
-  background-color: rgb(75, 179, 211);
+  background-color: rgb(16, 0, 54);
   color: rgb(255, 255, 255);
   border: 1px solid rgb(16, 0, 54);
 }
